UI design alignment issue solved

--- a/src/main/webapp/content/css/styles.css
+++ b/src/main/webapp/content/css/styles.css
@@ -118,7 +118,7 @@ h4 {
     margin-bottom: 0px !important;
 }
 .table{
-    margin-bottom: 0px !important;
+    margin-bottom: 3px !important;
 }
 dl {
     margin-top: 0;
